	* Changed: Added limit parameter for TodoyuDebug::printBacktrace()
	* Changed: enlarged content width
	* Changed: context menu refactoring
	* Changed: Open duration picker closes on body click
	* Changed: Adapted form.xsd
	* Changed: Raise php memory limit when a mail is sent with attachments
	* Changed: Tabs can now be disabled per item (return value false of label method removes the tab)
	* Bugfix: Visual optimization of sortable-panel-list handle
	* Bugfix: Fixed linux-chrome-styling-bug
	* Bugfix: styling bug in sortable panel list
	* Bugfix: Fixed and clean-up JSCalendar styling
	* Bugfix: SearchList-input value clearing disabled text-navigation
	* Bugfix: Fixed bug in the assistNumericInput method
	* Bugfix: Changed date-format for calendar week to ISO-8601
	* Bugfix: Min - form - validator was wrong
	* Bugfix: Fixed e-mail parsing
	* Bugfix: Removed boundaries of sub menu entries
	* Bugfix: Add tab key as class name for content item tabs
	* Bugfix: Active item tabs are unique
	* Bugfix: Auto linking found also background image source as link
	* Bugfix: TodoyuSql::buildInListQueryPart() value when negated and input is empty
	* Bugfix: Duration Pickers configuration failed
	* Bugfix: Class for fieldset didn't work properly/clean
	* Bugfix: isRequired() checks now for available field and for false value
	* Bugfix: Content tab did not store selected tab correctly
	* Bugfix: Prevent double linking of email addresses in RTE text
	* Library: Upgraded PHPsass from version 201203071100 to 201211282000
	* Library: Upgraded from PHPMailer-lite 5.1 to PHPMailer 5.2.4
	* Library: Highcharts 2.2.3
	* Library: tinyMCE 3.5.4.1
	* Library: Prototype 1.7.1

core 2.2.0 - 2012-05-03
	* Added: Parity of list items in widgets is refreshed on drop/resort
	* Added: Balloon info rendering, style and JS
	* Added: Hooks in TodoyuMail
	* Added: Empty listing shows "no items" notice
	* Added: Special chars encoding of CSV exported data